k8s-apps/forgejo-runner.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: forgejo-runner
spec:
  selector:
    matchLabels:
      app: forgejo-runner
  template:
    metadata:
      name: forgejo-runner
      labels:
        app: forgejo-runner
    spec:
      hostUsers: false
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: forgejo-runner
        - name: config
          configMap:
            name: forgejo-runner
      containers:
        - name: forgejo-runner
          image: code.forgejo.org/forgejo/runner:9.0.3
          command: ['forgejo-runner', 'daemon', '-c', '/etc/forgejo-runner/config.yaml']
          volumeMounts:
            - name: data
              mountPath: /data
            - name: config
              mountPath: /etc/forgejo-runner/config.yaml
              subPath: config.yaml
