k8s-apps/anythingllm.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: anythingllm
spec:
  selector:
    matchLabels:
      app: anythingllm
  template:
    metadata:
      name: anythingllm
      labels:
        app: anythingllm
    spec:
      securityContext:
        fsGroup: 1000
      runtimeClassName: gvisor
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: anythingllm
      containers:
        - name: anythingllm
          image: docker.io/mintplexlabs/anythingllm:1.12.0
          volumeMounts:
            - name: data
              subPath: storage
              mountPath: /app/server/storage
            - name: data
              subPath: .env
              mountPath: /app/server/.env
---
apiVersion: v1
kind: Service
metadata:
  name: anythingllm
spec:
  selector:
    app: anythingllm
  ports:
    - port: 3001
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: anythingllm
spec:
  parentRefs:
    - name: envoy-internal
  hostnames:
    - llm.strypsteen.com
  rules:
    - backendRefs:
        - name: anythingllm
          port: 3001
      timeouts:
        request: 600s
