k8s-apps/bifrost.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bifrost
spec:
  selector:
    matchLabels:
      app: bifrost
  template:
    metadata:
      name: bifrost
      labels:
        app: bifrost
    spec:
      securityContext:
        fsGroup: 1000
      runtimeClassName: gvisor
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: bifrost
      containers:
        - name: bifrost
          image: docker.io/maximhq/bifrost:v1.6.3
          volumeMounts:
            - name: data
              mountPath: /app/data
---
apiVersion: v1
kind: Service
metadata:
  name: bifrost
spec:
  selector:
    app: bifrost
  ports:
    - port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bifrost
spec:
  parentRefs:
    - name: envoy-internal
  hostnames:
    - aigw.strypsteen.com
  rules:
    - backendRefs:
        - name: bifrost
          port: 8080
      timeouts:
        request: 600s
