k8s-apps/caddy-static.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caddy-static
spec:
  replicas: 2
  selector:
    matchLabels:
      app: caddy-static
  template:
    metadata:
      name: caddy-static
      labels:
        app: caddy-static
    spec:
      hostUsers: false
      volumes:
        - name: config
          configMap:
            name: caddy-static
      containers:
        - name: caddy-static
          image: docker.io/caddy:2.10.2
          volumeMounts:
            - name: config
              mountPath: /etc/caddy/Caddyfile
              subPath: Caddyfile
            - name: config
              mountPath: /srv/index.html
              subPath: index.html
            - name: config
              mountPath: /srv/site.css
              subPath: site.css
---
apiVersion: v1
kind: Service
metadata:
  name: caddy-static
spec:
  selector:
    app: caddy-static
  ports:
    - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: caddy-static
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    cert-manager.io/private-key-algorithm: ECDSA
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - strypsteen.me
      - strypsteen.com
      - mta-sts.strypsteen.me
      - mta-sts.strypsteen.com
      secretName: static-certificate
  rules:
    - host: strypsteen.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy-static
                port:
                  number: 80
    - host: strypsteen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy-static
                port:
                  number: 80
    - host: mta-sts.strypsteen.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy-static
                port:
                  number: 80
    - host: mta-sts.strypsteen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy-static
                port:
                  number: 80
