k8s-apps/collabora.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collabora
spec:
  selector:
    matchLabels:
      app: collabora
  template:
    metadata:
      name: collabora
      labels:
        app: collabora
    spec:
      hostUsers: false
      volumes:
        - name: config
          configMap:
            name: collabora
      containers:
        - name: collabora
          image: docker.io/collabora/code:26.04.3.1.1
          volumeMounts:
            - name: config
              mountPath: /etc/coolwsd/coolwsd.xml
              subPath: coolwsd.xml
---
apiVersion: v1
kind: Service
metadata:
  name: collabora
spec:
  selector:
    app: collabora
  ports:
    - port: 9980
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: collabora
spec:
  parentRefs:
    - name: envoy-internal
  hostnames:
    - office.strypsteen.com
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: collabora
