k8s-apps/forgejo.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: forgejo
spec:
  selector:
    matchLabels:
      app: forgejo
  template:
    metadata:
      name: forgejo
      labels:
        app: forgejo
    spec:
      runtimeClassName: gvisor
      volumes:
        - name: config
          configMap:
            name: forgejo
        - name: data
          persistentVolumeClaim:
            claimName: forgejo
        - name: secret
          secret:
            secretName: forgejo
        - name: anubis-config
          configMap:
            name: forgejo-anubis
      containers:
        - name: forgejo
          image: codeberg.org/forgejo/forgejo:15.0.3-rootless
          volumeMounts:
            - name: data
              mountPath: /var/lib/gitea
            - name: config
              mountPath: /etc/forgejo.ini
              subPath: forgejo.ini
            - name: secret
              mountPath: /etc/forgejo-secret
        - name: anubis
          image: ghcr.io/techarohq/anubis:v1.25.0
          volumeMounts:
            - name: anubis-config
              mountPath: /config.yaml
              subPath: config.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: forgejo
spec:
  selector:
    app: forgejo
  ports:
    - name: web
      port: 8923
    - name: ssh
      port: 2222
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: forgejo-ssh
spec:
  parentRefs:
    - name: envoy
      sectionName: forgejo-ssh
  rules:
    - backendRefs:
        - name: forgejo
          port: 2222
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
spec:
  parentRefs:
    - name: envoy
  hostnames:
    - git.strypsteen.com
  rules:
    - backendRefs:
        - name: forgejo
          port: 8923
      timeouts:
        request: 600s
