k8s-apps/hermes.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hermes
spec:
  selector:
    matchLabels:
      app: hermes
  template:
    metadata:
      name: hermes
      labels:
        app: hermes
    spec:
      hostUsers: false
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: hermes
      containers:
        - name: hermes
          image: docker.io/nousresearch/hermes-agent:v2026.8.13
          args: ["gateway", "run"]
          volumeMounts:
            - name: data
              mountPath: /opt/data
        - name: podman
          image: quay.io/podman/stable:v5.8.2
          command: ['bash', '-c', 'rm /etc/containers/containers.conf && rm /home/podman/.config/containers/containers.conf && sudo -u podman -- podman system service -t0 tcp://127.0.0.1:8888']
          volumeMounts:
            - name: data
              mountPath: /opt/data
          securityContext:
            procMount: Unmasked
            seccompProfile:
              type: Unconfined
          resources:
            limits:
              devic.es/tun: 1
---
apiVersion: v1
kind: Service
metadata:
  name: hermes
spec:
  selector:
    app: hermes
  ports:
    - name: web
      port: 9119
    - name: webhook
      port: 8644
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hermes
spec:
  parentRefs:
    - name: envoy-internal
  hostnames:
    - agent.strypsteen.com
  rules:
    - backendRefs:
        - name: hermes
          port: 9119
      timeouts:
        request: 600s
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hermes-webhook
spec:
  parentRefs:
    - name: envoy
  hostnames:
    - agent-webhook.strypsteen.com
  rules:
    - backendRefs:
        - name: hermes
          port: 8644
