k8s-apps/navidrome.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: navidrome
spec:
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      name: navidrome
      labels:
        app: navidrome
    spec:
      runtimeClassName: gvisor
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: navidrome
      containers:
        - name: navidrome
          image: docker.io/deluan/navidrome:0.61.1
          volumeMounts:
            - name: data
              mountPath: /data
              subPath: data
            - name: data
              mountPath: /music
              subPath: music
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome
spec:
  selector:
    app: navidrome
  ports:
    - name: web
      port: 4533
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: navidrome
spec:
  parentRefs:
    - name: envoy-internal
  hostnames:
    - music.strypsteen.com
  rules:
    - backendRefs:
        - name: navidrome
          port: 4533
      timeouts:
        request: 600s
