k8s-apps/unifi-vm.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi
spec:
  selector:
    app: unifi-vm
  ports:
    - name: web
      port: 8443
    - name: device
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: unifi-api
spec:
  parentRefs:
    - name: envoy-internal
      sectionName: unifi-api
  rules:
    - backendRefs:
        - name: unifi
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unifi
spec:
  parentRefs:
    - name: envoy-internal
  hostnames:
    - network.strypsteen.com
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: unifi
      timeouts:
        request: 600s
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: unifi
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: unifi
  useClientProtocol: true
