k8s-apps/unifi.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: unifi
spec:
  selector:
    matchLabels:
      app: unifi
  template:
    metadata:
      name: unifi
      labels:
        app: unifi
    spec:
      hostUsers: false
      volumes:
        - name: cert
          emptyDir: {}
        - name: data
          persistentVolumeClaim:
            claimName: unifi
        - name: logs
          emptyDir: {}
      containers:
        - name: unifi
          image: docker.io/goofball222/unifi:9.3.43
          volumeMounts:
            - name: cert
              mountPath: /usr/lib/unifi/cert
            - name: data
              mountPath: /usr/lib/unifi/data
            - name: logs
              mountPath: /usr/lib/unifi/logs
---
apiVersion: v1
kind: Service
metadata:
  name: unifi
spec:
  selector:
    app: unifi
  ports:
    - name: web
      port: 8443
    - name: device
      port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi
  annotations:
    cert-manager.io/issuer: letsencrypt
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - k8s.strypsteen.com
      secretName: k8s-certificate
  rules:
    - host: network.strypsteen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unifi
                port:
                  number: 8443
