k8s-apps/vaultwarden.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vaultwarden
spec:
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      name: vaultwarden
      labels:
        app: vaultwarden
    spec:
      hostUsers: false
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: vaultwarden
      containers:
        - name: vaultwarden
          image: ghcr.io/dani-garcia/vaultwarden:1.34.3
          volumeMounts:
            - name: data
              mountPath: /data
---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
spec:
  selector:
    app: vaultwarden
  ports:
    - port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
spec:
  parentRefs:
    - name: envoy
  hostnames:
    - vault.strypsteen.com
  rules:
    - backendRefs:
        - name: vaultwarden
          port: 80
