k8s-apps/wireproxy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wireproxy
spec:
  selector:
    matchLabels:
      app: wireproxy
  template:
    metadata:
      name: wireproxy
      labels:
        app: wireproxy
    spec:
      hostUsers: false
      volumes:
        - name: config
          secret:
            secretName: wireproxy
      containers:
        - name: wireproxy
          image: ghcr.io/windtf/wireproxy
          volumeMounts:
            - name: config
              mountPath: /etc/wireproxy/config
              subPath: config
---
apiVersion: v1
kind: Service
metadata:
  name: wireproxy
spec:
  selector:
    app: wireproxy
  ports:
    - name: socks5
      port: 1080
    - name: http
      port: 1081
---
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: wireproxy-socks5
spec:
  parentRefs:
    - name: envoy-internal
      sectionName: proxy-socks5
  rules:
    - backendRefs:
        - name: wireproxy
          port: 1080
---
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: wireproxy-http
spec:
  parentRefs:
    - name: envoy-internal
      sectionName: proxy-http
  rules:
    - backendRefs:
        - name: wireproxy
          port: 1081
