k8s-apps/atlas.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: atlas-db
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: atlas-db
  policyTypes:
    - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: atlas-api
    - podSelector:
        matchLabels:
          app: atlas-master
    - podSelector:
        matchLabels:
          app: atlas-web
    - podSelector:
        matchLabels:
          app: atlas-devproxy
    - podSelector:
        matchLabels:
          cnpg.io/cluster: atlas-db
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cnpg-system
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: atlas-valkey
spec:
  podSelector:
    matchLabels:
      app: atlas-valkey
  policyTypes:
    - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: atlas-api
    - podSelector:
        matchLabels:
          app: atlas-master
    - podSelector:
        matchLabels:
          app: atlas-web
    - podSelector:
        matchLabels:
          app: atlas-devproxy
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: atlas-valkey
spec:
  selector:
    matchLabels:
      app: atlas-valkey
  template:
    metadata:
      name: atlas-valkey
      labels:
        app: atlas-valkey
    spec:
      runtimeClassName: gvisor
      containers:
        - name: atlas-valkey
          image: docker.io/valkey/valkey:9.1.1
          command: ['/bin/sh', '-c', 'valkey-server --requirepass "$VALKEY_PASSWORD"']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: atlas-api
  template:
    metadata:
      name: atlas-api
      labels:
        app: atlas-api
    spec:
      runtimeClassName: gvisor
      containers:
        - name: atlas-api
          image: git.strypsteen.com/infra/atlas
          command: ['/apiserver']
      imagePullSecrets:
        - name: git-strypsteen-com
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: atlas-master
spec:
  selector:
    matchLabels:
      app: atlas-master
  template:
    metadata:
      name: atlas-master
      labels:
        app: atlas-master
    spec:
      serviceAccountName: atlas-master
      runtimeClassName: gvisor
      containers:
        - name: atlas-master
          image: git.strypsteen.com/infra/atlas
          command: ['/master']
      imagePullSecrets:
        - name: git-strypsteen-com
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: atlas-web
  template:
    metadata:
      name: atlas-web
      labels:
        app: atlas-web
    spec:
      runtimeClassName: gvisor
      containers:
        - name: atlas-web
          image: git.strypsteen.com/infra/atlas
          command: ['/webserver']
      imagePullSecrets:
        - name: git-strypsteen-com
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas-devproxy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: atlas-devproxy
  template:
    metadata:
      name: atlas-devproxy
      labels:
        app: atlas-devproxy
    spec:
      runtimeClassName: gvisor
      containers:
        - name: atlas-devproxy
          image: git.strypsteen.com/infra/atlas
          command: ['/devproxy']
      imagePullSecrets:
        - name: git-strypsteen-com
---
apiVersion: v1
kind: Service
metadata:
  name: atlas-valkey
spec:
  selector:
    app: atlas-valkey
  ports:
    - port: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: atlas-api
spec:
  selector:
    app: atlas-api
  ports:
    - port: 8612
---
apiVersion: v1
kind: Service
metadata:
  name: atlas-web
spec:
  selector:
    app: atlas-web
  ports:
    - port: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: atlas-devproxy
spec:
  selector:
    app: atlas-devproxy
  ports:
    - port: 8001
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: atlas
spec:
  parentRefs:
    - name: envoy
      sectionName: atlas-api
  rules:
    - backendRefs:
        - name: atlas-api
          port: 8612
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: atlas
spec:
  parentRefs:
    - name: envoy
  hostnames:
    - console.strypsteen.com
  rules:
    - backendRefs:
        - name: atlas-web
          port: 8000
      sessionPersistence:
        type: Cookie
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: atlas-devproxy
spec:
  parentRefs:
    - name: envoy
  hostnames:
    - "*.dev.console.strypsteen.com"
  rules:
    - backendRefs:
        - name: atlas-devproxy
          port: 8001
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: atlas-devproxy-proxy
spec:
  parentRefs:
    - name: envoy
  hostnames:
    - "*.devproxy.console.strypsteen.com"
  rules:
    - backendRefs:
        - name: atlas-devproxy
          port: 8001
---
apiVersion: v1
kind: Namespace
metadata:
  name: atlas
  labels:
    pod-security.kubernetes.io/enforce: privileged
