k8s-apps/backups-vm.yaml
apiVersion: v1
kind: Service
metadata:
  name: backups-vm
spec:
  selector:
    app: backups-vm
  ports:
    - name: minio
      port: 9000
    - name: minio-web
      port: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: backups-vm-ssh
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  loadBalancerIP: 192.168.253.32
  selector:
    app: backups-vm
  ports:
    - port: 22
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backups-vm
spec:
  podSelector:
    matchLabels:
      app: backups-vm
  policyTypes:
    - Ingress
  ingress:
    - {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backups-vm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - k8s.strypsteen.com
      secretName: k8s-certificate
  rules:
    - host: backups.strypsteen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backups-vm
                port:
                  number: 9001
