k8s-apps/browserless.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: browserless
spec:
  selector:
    matchLabels:
      app: browserless
  template:
    metadata:
      name: browserless
      labels:
        app: browserless
    spec:
      runtimeClassName: gvisor
      containers:
        - name: browserless
          image: ghcr.io/browserless/chromium:v2.41.0
---
apiVersion: v1
kind: Service
metadata:
  name: browserless
spec:
  selector:
    app: browserless
  ports:
    - port: 3000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: browserless
spec:
  podSelector:
    matchLabels:
      app: browserless
  policyTypes:
    - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: big-agi
