k8s-apps/gpu-vm.yaml
apiVersion: v1
kind: Service
metadata:
  name: gpu-vm
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  loadBalancerIP: 192.168.253.33
  selector:
    app: gpu-vm
  ports:
    - name: ssh
      port: 22
    - name: sunshine-1
      port: 47984
    - name: sunshine-2
      port: 47989
    - name: sunshine-3
      port: 48010
    - name: sunshine-4
      protocol: UDP
      port: 47998
    - name: sunshine-5
      protocol: UDP
      port: 47999
    - name: sunshine-6
      protocol: UDP
      port: 48000
    - name: sunshine-7
      protocol: UDP
      port: 48002
    - name: sunshine-8
      protocol: UDP
      port: 48010
---
apiVersion: v1
kind: Service
metadata:
  name: gpu-vm-internal
spec:
  selector:
    app: gpu-vm
  ports:
    - name: sunshine
      port: 47990
    - name: ollama
      port: 11434
    - name: invokeai
      port: 9090
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gpu-vm
spec:
  podSelector:
    matchLabels:
      app: gpu-vm
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 22
        - port: 47984
        - port: 47989
        - port: 48010
        - protocol: UDP
          port: 47998
        - protocol: UDP
          port: 47999
        - protocol: UDP
          port: 48000
        - protocol: UDP
          port: 48002
        - protocol: UDP
          port: 48010

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ollama
spec:
  parentRefs:
    - name: envoy-internal
  hostnames:
    - textgen.strypsteen.com
  rules:
    - backendRefs:
        - name: gpu-vm-internal
          port: 11434
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sunshine
spec:
  parentRefs:
    - name: envoy-internal
  hostnames:
    - remote-desktop.strypsteen.com
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: sunshine
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: invokeai
spec:
  parentRefs:
    - name: envoy-internal
  hostnames:
    - imagegen.strypsteen.com
  rules:
    - backendRefs:
        - name: gpu-vm-internal
          port: 9090
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: invokeai
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: invokeai
  basicAuth:
    users:
      name: invokeai-auth
