k8s-apps/haproxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haproxy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: haproxy
  template:
    metadata:
      name: haproxy
      labels:
        app: haproxy
    spec:
      hostUsers: false
      volumes:
        - name: config
          configMap:
            name: haproxy
      containers:
        - name: haproxy
          image: docker.io/haproxy:2.6.23
          volumeMounts:
            - name: config
              mountPath: /usr/local/etc/haproxy/haproxy.cfg
              subPath: haproxy.cfg
---
apiVersion: v1
kind: Service
metadata:
  name: haproxy
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  loadBalancerIP: 192.168.253.31
  selector:
    app: haproxy
  ports:
    - name: http
      port: 80
    - name: https
      port: 443
    - name: http-proxy
      port: 180
    - name: https-proxy
      port: 1443
    - name: forgejo-ssh
      port: 2222
    - name: atlas-api
      port: 8612
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: haproxy
spec:
  podSelector:
    matchLabels:
      app: haproxy
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 80
        - port: 443
        - port: 180
        - port: 1443
        - port: 2222
        - port: 8612
