k8s-apps/immich-valkey.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: immich-valkey
spec:
  selector:
    matchLabels:
      app: immich-valkey
  template:
    metadata:
      name: immich-valkey
      labels:
        app: immich-valkey
    spec:
      hostUsers: false
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: immich-valkey
      containers:
        - name: immich-valkey
          image: docker.io/valkey/valkey:8.1.4
          command: ['valkey-server']
          volumeMounts:
            - name: data
              mountPath: /data
---
apiVersion: v1
kind: Service
metadata:
  name: immich-valkey
spec:
  selector:
    app: immich-valkey
  ports:
    - port: 6379
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: immich-valkey
spec:
  podSelector:
    matchLabels:
      app: immich-valkey
  policyTypes:
    - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: immich
