k8s-apps/immich.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: immich-db
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: immich-db
  policyTypes:
    - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: immich
    - podSelector:
        matchLabels:
          cnpg.io/cluster: immich-db
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cnpg-system
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: immich
spec:
  selector:
    matchLabels:
      app: immich
  template:
    metadata:
      name: immich
      labels:
        app: immich
    spec:
      hostUsers: false
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: immich
      containers:
        - name: immich
          image: ghcr.io/immich-app/immich-server:v2.4.0
          volumeMounts:
            - name: data
              mountPath: /data
---
apiVersion: v1
kind: Service
metadata:
  name: immich
spec:
  selector:
    app: immich
  ports:
    - port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
spec:
  parentRefs:
    - name: envoy-internal
  hostnames:
    - photos.strypsteen.com
  rules:
    - backendRefs:
        - name: immich
          port: 8080
