k8s-apps/infra-vm.yaml
apiVersion: v1
kind: Service
metadata:
  name: infra-vm
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  loadBalancerIP: 192.168.253.31
  selector:
    app: infra-vm
  ports:
    - name: ssh
      port: 22
    - name: http
      port: 80
    - name: https
      port: 443
    - name: http-proxy
      port: 180
    - name: https-proxy
      port: 1443
    - name: forgejo-ssh
      port: 2222
    - name: atlas-api
      port: 8612
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: infra-vm
spec:
  podSelector:
    matchLabels:
      app: infra-vm
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 22
        - port: 80
        - port: 443
        - port: 180
        - port: 1443
        - port: 2222
        - port: 8612
