k8s-apps/keycloak.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: keycloak-db
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: keycloak-db
  policyTypes:
    - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: keycloak
    - podSelector:
        matchLabels:
          cnpg.io/cluster: keycloak-db
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cnpg-system
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
spec:
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      name: keycloak
      labels:
        app: keycloak
    spec:
      hostUsers: false
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.4.2-0
          args: ['start', '--hostname=auth.strypsteen.com', '--http-enabled=true', '--proxy-headers=xforwarded', '--db=postgres', '--db-url-host=keycloak-db-rw', '--db-username=app', '--db-url-database=app']
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  selector:
    app: keycloak
  ports:
    - port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - k8s.strypsteen.com
      secretName: k8s-certificate
  rules:
    - host: auth.strypsteen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
