k8s-apps/loki.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: loki
spec:
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      name: loki
      labels:
        app: loki
    spec:
      hostUsers: false
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: loki
      containers:
        - name: loki
          image: docker.io/grafana/loki:3.6.1
          args: ['-config.file=/etc/loki/local-config.yaml', '-log.level=warn', '-reporting.enabled=false', '-querier.split-queries-by-interval=24h']
          volumeMounts:
            - name: data
              mountPath: /loki
---
apiVersion: v1
kind: Service
metadata:
  name: loki
spec:
  selector:
    app: loki
  ports:
    - port: 3100
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    cert-manager.io/private-key-algorithm: ECDSA
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: metrics-auth
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - metrics.strypsteen.com
      secretName: metrics-certificate
  rules:
    - host: metrics.strypsteen.com
      http:
        paths:
          - path: /loki/api/v1/push
            pathType: Exact
            backend:
              service:
                name: loki
                port:
                  number: 3100
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki
spec:
  parentRefs:
    - name: envoy
  hostnames:
    - metrics.strypsteen.com
  rules:
    - matches:
        - path:
            type: Exact
            value: /loki/api/v1/push
      backendRefs:
        - name: loki
          port: 3100
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: loki
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: loki
  basicAuth:
    users:
      name: metrics-auth
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loki
spec:
  podSelector:
    matchLabels:
      app: loki
  policyTypes:
    - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
