k8s-apps/nextcloud-valkey.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nextcloud-valkey
spec:
  selector:
    matchLabels:
      app: nextcloud-valkey
  template:
    metadata:
      name: nextcloud-valkey
      labels:
        app: nextcloud-valkey
    spec:
      runtimeClassName: gvisor
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: nextcloud-valkey
      containers:
        - name: nextcloud-valkey
          image: docker.io/valkey/valkey:9.1.0
          volumeMounts:
            - name: data
              mountPath: /data
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-valkey
spec:
  selector:
    app: nextcloud-valkey
  ports:
    - port: 6379
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nextcloud-valkey
spec:
  podSelector:
    matchLabels:
      app: nextcloud-valkey
  policyTypes:
    - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: nextcloud
