k8s-apps/nextcloud.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nextcloud-db
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: nextcloud-db
  policyTypes:
    - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: nextcloud
    - podSelector:
        matchLabels:
          cnpg.io/cluster: nextcloud-db
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cnpg-system
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nextcloud
spec:
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      name: nextcloud
      labels:
        app: nextcloud
    spec:
      hostUsers: false
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: nextcloud
      containers:
        - name: nextcloud
          image: docker.io/nextcloud:32.0.3
          command: ['sh', '-c', 'busybox crond && /entrypoint.sh apache2-foreground > /dev/null']
          volumeMounts:
            - name: data
              mountPath: /var/www/html
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
spec:
  selector:
    app: nextcloud
  ports:
    - port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
spec:
  parentRefs:
    - name: envoy
  hostnames:
    - cloud.strypsteen.com
  rules:
    - backendRefs:
        - name: nextcloud
          port: 80
