k8s-apps/synapse.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: synapse-db
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: synapse-db
  policyTypes:
    - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: synapse
    - podSelector:
        matchLabels:
          cnpg.io/cluster: synapse-db
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cnpg-system
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: synapse
spec:
  selector:
    matchLabels:
      app: synapse
  template:
    metadata:
      name: synapse
      labels:
        app: synapse
    spec:
      runtimeClassName: gvisor
      volumes:
        - name: config
          configMap:
            name: synapse
        - name: config-secret
          secret:
            secretName: synapse
        - name: data
          persistentVolumeClaim:
            claimName: synapse
      containers:
        - name: synapse
          image: ghcr.io/element-hq/synapse:v1.152.0
          args: ['run', '--config-path', '/etc/synapse/homeserver.yaml', '--config-path', '/etc/synapse.yaml']
          volumeMounts:
            - name: config
              mountPath: /etc/synapse/homeserver.yaml
              subPath: homeserver.yaml
            - name: config
              mountPath: /etc/synapse/log_config.yaml
              subPath: log_config.yaml
            - name: config-secret
              mountPath: /etc/synapse.yaml
              subPath: synapse.yaml
            - name: data
              mountPath: /data
---
apiVersion: v1
kind: Service
metadata:
  name: synapse
spec:
  selector:
    app: synapse
  ports:
    - port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: synapse
spec:
  parentRefs:
    - name: envoy
  hostnames:
    - matrix.strypsteen.com
  rules:
    - backendRefs:
        - name: synapse
          port: 8080
