k8s-apps/unifi-mongodb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: unifi-mongodb
spec:
  selector:
    matchLabels:
      app: unifi-mongodb
  template:
    metadata:
      name: unifi-mongodb
      labels:
        app: unifi-mongodb
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: unifi-mongodb
      containers:
        - name: unifi-mongodb
          image: docker.io/mongo:8.0.12          
          volumeMounts:
            - name: data
              mountPath: /data/db
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-mongodb
spec:
  selector:
    app: unifi-mongodb
  ports:
    - port: 27017
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: unifi-mongodb
spec:
  podSelector:
    matchLabels:
      app: unifi-mongodb
  policyTypes:
    - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: unifi
